--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,6 @@
+/********************************************************
+************* START GLOBAL *******************************
+****************************************************************/
 * {
   box-sizing: border-box;
   margin: 0rem;
@@ -9,6 +12,15 @@
 
 body {
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+[class*=col-] {
+  flex-basis: auto;
+}
+
+.auth-action {
+  text-align: left;
+  padding: 0.7rem 1rem;
 }
 
 .col-1 {
@@ -41,21 +53,119 @@ body {
   padding: 0.4rem;
 }
 
+.col-7 {
+  width: 58.31%;
+  padding: 0.4rem;
+}
+
+.form {
+  display: block;
+}
+.form .form-group {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+}
+.form .form-group label {
+  display: block;
+  padding: 0.25rem 0rem;
+}
+.form .form-group .form-control {
+  display: block;
+  width: 100%;
+  outline: 0;
+  border: 0;
+  padding: 0.5rem 0.75rem;
+  box-shadow: 0px 0px 1px 1px #ff153b;
+  border-radius: 0.2rem;
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+  line-height: 2.4;
+}
+.form .form-group textarea {
+  resize: none;
+}
+.form .form-group input[type=text] {
+  padding: 0.3rem 0.5rem;
+}
+
+.title, .section-heading .section-title {
+  font-size: 1.75rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.sub-title, .section-heading .sub-title {
+  line-height: 1.5;
+  font-size: 0.8rem;
+  text-align: left;
+}
+
 .section-heading {
   display: block;
   margin: auto;
   padding: 1rem 0rem;
   text-align: center;
 }
-.section-heading .section-title {
-  font-size: 1.75rem;
-  font-weight: 700;
-  margin-bottom: 0.5rem;
-}
 .section-heading .sub-title {
-  line-height: 1.5;
-  font-size: 0.8rem;
   text-align: center;
+}
+
+.container {
+  display: block;
+  width: 80%;
+  margin: auto;
+}
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.alert-close {
+  float: right;
+}
+.alert-close::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.alert {
+  padding: 0.75rem;
+  margin: 1rem auto;
+  display: block;
+  text-align: left;
+}
+.alert-dark {
+  background-color: #555;
+  color: #fff;
+}
+.alert-primary {
+  background-color: #ff153b;
+  color: #fff;
+}
+.alert-light {
+  background-color: #fff1f1;
+  color: #333;
+}
+.alert-success {
+  background-color: #28a745;
+  color: #fff;
+}
+.alert-danger {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.badge {
+  display: inline;
+  font-size: 0.75rem;
+  padding: 1px;
+  border-radius: 30%;
+  color: #fff1f1;
+  background-color: #ff153b;
 }
 
 .grid-wrapper::-webkit-scrollbar {
@@ -96,31 +206,9 @@ body {
   }
 }
 
-[class*=col-] {
-  flex-basis: auto;
-}
-
-.container {
-  display: inline-block;
-  width: 80%;
-  margin: auto;
-}
-
-.clearfix::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
-.badge {
-  display: inline;
-  font-size: 0.75rem;
-  padding: 1px;
-  border-radius: 30%;
-  color: #fff1f1;
-  background-color: #ff153b;
-}
-
+/********************************************************
+************* START NAVBAR *******************************
+****************************************************************/
 .navbar {
   display: block;
   padding: 0rem 2rem;
@@ -191,6 +279,12 @@ body {
   display: block;
 }
 
+/********************************************************
+*************STOP NAVBAR *******************************
+****************************************************************/
+/********************************************************
+************* START PRODUCT CARD *******************************
+****************************************************************/
 .card-cta, .product-card .product-card-cta .add-cart-cta, .product-card .product-card-cta .buy-now-cta {
   width: 100%;
   padding: 0.75rem 0rem;
@@ -244,6 +338,247 @@ body {
 .product-card .product-card-cta .add-cart-cta {
   background-color: #555;
   color: #fff1f1;
+}
+
+/********************************************************
+************* START PRODUCT CARD*******************************
+****************************************************************/
+table.table.cart-table {
+  display: block;
+  width: 100%;
+  border-collapse: collapse;
+}
+table.table.cart-table tr {
+  vertical-align: middle;
+}
+table.table.cart-table th, table.table.cart-table td {
+  height: 1.2rem;
+  padding: 1rem;
+}
+
+/********************************************************
+************* START LOGIN *******************************
+****************************************************************/
+#signup-form, #login-form {
+  width: 80%;
+}
+
+#signup-btn, #login-btn {
+  padding: 1rem 1.75rem;
+  text-align: center;
+  color: #fff1f1;
+  background-color: #ff153b;
+  border-radius: 5px;
+  margin-bottom: 1.75rem;
+}
+
+/********************************************************
+************* STOP LOGIN *******************************
+****************************************************************/
+/********************************************************
+************* STOP CART *******************************
+****************************************************************/
+.cart-order-form {
+  float: right;
+}
+
+.cart-order-btn {
+  padding: 1rem 1.5rem;
+  background-color: #ff153b;
+  color: #fff1f1;
+  font-size: 1.1rem;
+  font-weight: bolder;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.modal.show {
+  display: block;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0rem;
+  left: 0rem;
+  width: 100%;
+  height: 100%;
+  background-color: #555;
+  z-index: 99;
+  overflow: scroll;
+}
+
+.modal-close {
+  float: right;
+  background-color: #ff153b;
+  color: #fff1f1;
+  font-weight: 700;
+  padding: 0.25rem;
+  cursor: pointer;
+}
+
+.modal-close::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.modal-container {
+  width: 85%;
+  display: block;
+  margin: 5rem auto;
+  background-color: #fff1f1;
+  color: #555;
+  padding: 1.25rem;
+}
+
+.modal-header {
+  padding: 1rem 0.5rem;
+  text-align: left;
+  font-size: 1.2rem;
+  font-weight: 700;
+  border-bottom: 1px solid #555;
+  box-shadow: 0px 2px 3px #ff153b;
+}
+
+.modal-body {
+  margin: 1rem auto;
+  text-align: left;
+  font-size: 1rem;
+}
+
+.modal-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: center;
+}
+
+.auth-container {
+  display: block;
+  width: 100%;
+  text-align: left;
+  background-color: #fff1f1;
+  color: #555;
+}
+
+#auth-sidebar-control {
+  display: none;
+}
+
+#auth-sidebar-control:checked ~ .auth-sidebar {
+  left: 0rem;
+}
+
+#auth-sidebar-control:checked ~ .auth-sidebar-handle {
+  opacity: 0;
+  user-select: none;
+}
+
+.auth-sidebar-handle {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  cursor: pointer;
+}
+
+#auth-sidebar-control:checked ~ .auth-main {
+  margin-left: 13rem;
+}
+
+#auth-sidebar-control:checked ~ .auth-main .auth-navbar {
+  margin-left: 0rem;
+  padding-left: 0.25rem;
+}
+
+.auth-sidebar {
+  position: fixed;
+  left: -13rem;
+  top: 0rem;
+  height: 100%;
+  width: 13rem;
+  background-color: #ff153b;
+  color: #fff1f1;
+  transition: left 0.6s ease-in-out;
+}
+
+.auth-sidebar-close {
+  position: absolute;
+  top: 0rem;
+  right: 0rem;
+  padding: 0.2rem;
+  color: #555;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.sidebar-header {
+  line-height: 4rem;
+  font-size: 1.2rem;
+  font-weight: bolder;
+  background-color: #ff153b;
+  color: #fff1f1;
+  text-align: center;
+}
+.sidebar-header a {
+  color: #fff1f1;
+}
+
+.sidebar-name {
+  font-size: 1.75rem;
+}
+
+.auth-sidebar .sidebar-actions {
+  margin-top: 1.75rem;
+}
+
+.auth-sidebar .sidebar-actions li {
+  text-align: center;
+  margin: auto;
+  display: block;
+  width: 100%;
+  transition: padding 0.8s ease-in;
+}
+
+.auth-sidebar .sidebar-actions li:hover {
+  padding-left: 2.5rem;
+}
+
+.auth-sidebar .sidebar-actions li .auth-sidebar-link {
+  line-height: 1.8rem;
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin: auto;
+  text-align: left;
+  padding: 0.5rem 0rem 0.5rem 1.25rem;
+  border-bottom: 1px solid #555;
+  border-top: 1px solid #ff153b;
+  color: #fff1f1;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.auth-sidebar .sidebar-actions li .auth-sidebar-link .fa {
+  margin-right: 0.5rem;
+  text-align: left;
+}
+
+.auth-main {
+  margin: 0rem;
+  transition: margin 0.6s ease-in-out;
+}
+
+.auth-navbar {
+  margin-left: 4rem;
+  line-height: 4rem;
+  transition: margin 0.6s ease-in-out;
+}
+
+.auth-wrapper {
+  width: 98%;
+  display: block;
+  text-align: center;
 }
 
 /*# sourceMappingURL=main.css.map */
