--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,3 +1,7 @@
+
+/********************************************************
+************* START GLOBAL *******************************
+****************************************************************/
 *{
   box-sizing: border-box;
   margin: 0rem;
@@ -12,15 +16,88 @@ body{
 }
 $primary-color: #ff153b;
 $light-color: #fff1f1;
+$success-color: #28a745;
+$danger-color: #dc3545;
 $dark-color: #555;
 $mobile-breakpoint: 560px;
-$sizes: (1, 2, 3, 4, 5, 6);
+$auth-sidebar-width: 13rem;
+$auth-sidebar-width-alt: -13rem;
+
+[class *= 'col-']{
+  flex-basis: auto;
+}
+
+.auth-action{
+  text-align: left;
+  padding: .7rem 1rem;
+}
+
+$sizes: (1, 2, 3, 4, 5, 6, 7);
 $unit: 8.33%;
 @each $size in $sizes {
   .col-#{$size}{
     width: #{$size * $unit} ;
     padding: .4rem;
   }
+}
+// Set text color based on background color
+@function set-text-color($bg-color){
+  @if (lightness($bg-color) > 55) {
+    @return #333;
+  } @else {
+    @return #fff;
+  }
+}
+@mixin set-background-color($color){
+  background-color: $color;
+  color: set-text-color($color);
+}
+
+.form{
+  display: block;
+  .form-group{
+    display: block;
+    width: 100%;
+    padding: .5rem;
+
+    label{
+      display: block;
+      padding: .25rem 0rem;
+    }
+
+    .form-control{
+      display: block;
+      width: 100%;
+      outline: 0;
+      border: 0;
+      padding: .5rem .75rem;
+      box-shadow: 0px 0px 1px 1px $primary-color;
+      border-radius: .2rem;
+      font-size: 1.1rem;
+      letter-spacing: 1px;
+      line-height: 2.4;
+      
+    }
+
+    textarea{
+      resize: none;
+    }
+    input[type="text"]{
+      padding: .3rem .5rem;
+      
+    }
+  }
+}
+
+.title{
+  font-size: 1.75rem;
+    font-weight: 700;
+    margin-bottom: .5rem;
+}
+.sub-title{
+  line-height: 1.5;
+    font-size: .8rem;
+    text-align: left;
 }
 
 .section-heading{
@@ -29,16 +106,68 @@ $unit: 8.33%;
   padding: 1rem 0rem;
   text-align: center;
   .section-title{
-    font-size: 1.75rem;
-    font-weight: 700;
-    margin-bottom: .5rem;
+    @extend .title;
   }
   .sub-title{
-    line-height: 1.5;
-    font-size: .8rem;
+    @extend .sub-title;
     text-align: center;
   }
 }
+
+.container{
+  display: block;
+  width: 80%;
+  margin: auto;
+}
+.clearfix::after{
+  content: '';
+  display: block;
+  clear: both;
+}
+
+// Alerts
+.alert-close{
+  float: right;
+  &::after{
+    display: block;
+    content: "";
+    clear: both;
+  }
+}
+.alert{
+  padding: .75rem;
+  margin: 1rem auto;
+  display: block;
+  text-align: left;
+  &-dark{
+    @include set-background-color($dark-color)
+  }
+
+  &-primary{
+    @include set-background-color($primary-color)
+  }
+  &-light{
+    @include set-background-color($light-color)
+  }
+  &-success{
+    @include set-background-color($success-color)
+  }
+
+  &-danger{
+    @include set-background-color($danger-color)
+  }
+}
+
+
+.badge{
+  display: inline;
+  font-size: .75rem;
+  padding: 1px;
+  border-radius: 30%;
+  color: $light-color;
+  background-color: $primary-color;
+}
+
 
 // Over write default scroll bar
     .grid-wrapper::-webkit-scrollbar{
@@ -78,32 +207,15 @@ $unit: 8.33%;
     
   }
 }
-[class *= 'col-']{
-  flex-basis: auto;
-}
 
 
-.container{
-  display: inline-block;
-  width: 80%;
-  margin: auto;
-}
-.clearfix::after{
-  content: '';
-  display: block;
-  clear: both;
-}
 
-.badge{
-  display: inline;
-  font-size: .75rem;
-  padding: 1px;
-  border-radius: 30%;
-  color: $light-color;
-  background-color: $primary-color;
-}
 
+/********************************************************
+************* START NAVBAR *******************************
+****************************************************************/
 // Navbar
+
 .navbar{
   display: block;
   padding: 0rem 2rem;
@@ -186,7 +298,13 @@ $unit: 8.33%;
   } 
 }
 
+/********************************************************
+*************STOP NAVBAR *******************************
+****************************************************************/
 
+/********************************************************
+************* START PRODUCT CARD *******************************
+****************************************************************/
 // Product Card
 .card-cta{
   width: 100%;
@@ -253,4 +371,230 @@ $unit: 8.33%;
 
   }
 }
+/********************************************************
+************* START PRODUCT CARD*******************************
+****************************************************************/
+table.table.cart-table{
+  display: block;
+  width: 100%;
+  border-collapse: collapse;
 
+  tr{
+    vertical-align: middle;
+  }
+
+  th, td{
+    height: 1.2rem;
+    padding: 1rem;
+  }
+}
+/********************************************************
+************* START LOGIN *******************************
+****************************************************************/
+#signup-form, #login-form{
+  width: 80%;
+}
+
+#signup-btn, #login-btn{
+  padding: 1rem 1.75rem;
+  text-align: center;
+  color: $light-color;
+  background-color: $primary-color;
+  border-radius: 5px;
+  margin-bottom: 1.75rem;
+
+}
+/********************************************************
+************* STOP LOGIN *******************************
+****************************************************************/
+
+/********************************************************
+************* STOP CART *******************************
+****************************************************************/
+.cart-order-form{
+  float: right;
+  
+}
+
+.cart-order-btn{
+  padding: 1rem 1.5rem;
+  background-color: $primary-color;
+  color: $light-color;
+  font-size: 1.1rem;
+  font-weight: bolder;
+  text-align: center;
+  border-radius: 5px;
+}
+
+   // Modal
+    .modal.show{
+      display: block;
+    }
+    .modal{
+      display: none;
+      position: fixed;
+      top: 0rem;
+      left: 0rem;
+      width: 100%;
+      height: 100%;
+      background-color: $dark-color;
+      // opacity: .7;
+      z-index: 99;
+      overflow: scroll;
+    }
+    .modal-close{
+      float: right;
+      background-color: $primary-color;
+      color: $light-color;
+      font-weight: 700;
+      padding: .25rem;
+      cursor: pointer;
+    }
+    .modal-close::after{
+      display: block;
+      content: "";
+      clear: both;
+    }
+    .modal-container{
+      width: 85%;
+      display: block;
+      margin: 5rem auto;
+      background-color: $light-color;
+      color: $dark-color;
+      padding: 1.25rem;
+    }
+    .modal-header{
+      padding: 1rem .5rem;
+      text-align: left;
+      font-size: 1.2rem;
+      font-weight: 700;
+      border-bottom: 1px solid $dark-color;
+      box-shadow: 0px 2px 3px $primary-color;
+    }
+    .modal-body{
+      margin: 1rem auto;
+      text-align: left;
+      font-size: 1rem;
+    }
+    .modal-footer{
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-content: center;
+      
+
+    }
+
+
+
+// Authenticaed user 
+    .auth-container{
+       display: block;
+       width: 100%;
+       text-align: left;
+       background-color: $light-color;
+       color: $dark-color;
+     }
+     #auth-sidebar-control{
+       display: none;
+     }
+     #auth-sidebar-control:checked ~ .auth-sidebar {
+       left: 0rem;
+     }
+     #auth-sidebar-control:checked ~ .auth-sidebar-handle {
+       opacity: 0;
+       user-select: none;
+     }
+     .auth-sidebar-handle{
+       position: absolute;
+       top: 1rem;
+       left: 1rem;
+       cursor: pointer;
+     }
+     #auth-sidebar-control:checked ~ .auth-main {
+       margin-left: $auth-sidebar-width;
+     }
+     #auth-sidebar-control:checked ~ .auth-main .auth-navbar {
+       margin-left: 0rem;
+       padding-left: .25rem;
+     }
+     .auth-sidebar{
+       position: fixed;
+       left: $auth-sidebar-width-alt;
+       top: 0rem;
+       height: 100%;
+       width: $auth-sidebar-width;
+       background-color: $primary-color;
+       color: $light-color;
+       transition: left .6s ease-in-out;       
+     }
+     .auth-sidebar-close{
+       position: absolute;
+       top: 0rem;
+       right: 0rem;
+       padding: .2rem;
+       color: $dark-color;
+       background-color: transparent;
+       cursor: pointer;
+     }
+     .sidebar-header{
+       line-height: 4rem;
+       font-size: 1.2rem;
+       font-weight: bolder;
+       background-color: $primary-color;
+      //  opacity: .8;
+       color: $light-color;
+       text-align: center; 
+       a{
+         color: $light-color;
+       }        
+     }
+     .sidebar-name{
+       font-size: 1.75rem;
+     }
+    .auth-sidebar .sidebar-actions{
+      margin-top: 1.75rem;
+    }
+    .auth-sidebar .sidebar-actions li{
+     text-align: center;
+     margin: auto;
+     display: block;
+     width: 100%;
+     transition: padding .8s ease-in;
+    }
+    .auth-sidebar .sidebar-actions li:hover{
+      padding-left: 2.5rem;
+    }
+    .auth-sidebar .sidebar-actions li .auth-sidebar-link{
+      line-height: 1.8rem;
+      width: 100%;
+      height: 100%;
+      display: block;
+      margin: auto;
+      text-align: left;
+      padding: .5rem 0rem .5rem 1.25rem;
+      border-bottom: 1px solid $dark-color;
+      border-top: 1px solid $primary-color;
+      color: $light-color;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    .auth-sidebar .sidebar-actions li .auth-sidebar-link .fa{
+      margin-right: .5rem;
+      text-align: left;
+    }
+
+    .auth-main{
+      margin: 0rem;
+      transition: margin .6s ease-in-out;
+    }
+    .auth-navbar{
+      margin-left: 4rem;
+      line-height: 4rem;
+      transition: margin .6s ease-in-out;
+    }
+    .auth-wrapper{
+      width: 98%;
+      display: block;
+      text-align: center;
+    }
