--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,8 +10,15 @@
   resize: none;
 }
 
-body {
-  font-family: Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+html, body {
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: "Montserrat", Roboto, Oxygen, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.icon {
+  margin-right: 0.2rem;
+  color: #ff153b;
 }
 
 [class*=col-] {
@@ -80,7 +87,7 @@ body {
   border-radius: 0.2rem;
   font-size: 1.1rem;
   letter-spacing: 1px;
-  line-height: 2.4;
+  line-height: 2.1;
 }
 .form .form-group textarea {
   resize: none;
@@ -93,6 +100,7 @@ body {
   font-size: 1.75rem;
   font-weight: 700;
   margin-bottom: 0.5rem;
+  color: #ff153b;
 }
 
 .sub-title, .section-heading .sub-title {
@@ -168,21 +176,40 @@ body {
   background-color: #ff153b;
 }
 
+.btn {
+  padding: 0.8rem 1.2rem;
+  text-align: center;
+  border: none;
+  outline: none;
+  transition: all 0.4s;
+}
+.btn-primary {
+  background-color: #ff153b;
+  color: #fff1f1;
+}
+.btn-reverse {
+  background-color: #fff1f1;
+  color: #ff153b;
+}
+.btn:hover {
+  opacity: 0.8;
+}
+
 .grid-wrapper::-webkit-scrollbar {
   width: 100%;
   height: 1rem;
 }
 
 .grid-wrapper::-webkit-scrollbar-track {
-  background-color: #555;
+  background-color: #fff1f1;
   border-radius: 0.6rem;
 }
 
 .grid-wrapper::-webkit-scrollbar-thumb {
-  background-color: #fff1f1;
+  background-color: #ff153b;
   border: 1px solid #555;
   border-radius: 0.6rem;
-  height: 0.25rem;
+  height: 0.125rem;
 }
 
 .grid-wrapper {
@@ -227,6 +254,7 @@ body {
 .logo-name {
   font-size: 2rem;
   font-weight: 600;
+  color: #ff153b;
 }
 
 @media screen and (max-width: 560px) {
@@ -236,8 +264,8 @@ body {
 }
 .navlinks .navlink {
   padding: 0rem 0.75rem;
-  color: #555;
-  font-size: 1.25rem;
+  color: #ff153b;
+  font-size: 1rem;
   transition: color 0.5s ease-in;
 }
 .navlinks .navlink:hover {
@@ -255,6 +283,7 @@ body {
 
 .hamburger {
   display: none;
+  color: #ff153b;
   line-height: inherit;
 }
 @media screen and (max-width: 560px) {
@@ -283,6 +312,90 @@ body {
 *************STOP NAVBAR *******************************
 ****************************************************************/
 /********************************************************
+*************START BANNER *******************************
+****************************************************************/
+.page-header {
+  background-color: #ff153b;
+  padding: 3rem 0rem;
+  width: 100%;
+  display: block;
+}
+
+.banner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  column-gap: 0.8rem;
+}
+@media screen and (max-width: 560px) {
+  .banner {
+    display: block;
+  }
+}
+
+.banner-caption {
+  width: 50%;
+  color: #fff1f1;
+}
+.banner-caption p {
+  font-size: 0.8rem;
+  color: #fff1f1;
+}
+@media screen and (max-width: 560px) {
+  .banner-caption {
+    display: block;
+    width: 100%;
+  }
+}
+
+.banner-hero {
+  color: #fff1f1;
+  background-color: #ff153b;
+  opacity: 0.4;
+  background-image: url(https://picsum.photos/450/900);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-origin: border-box;
+}
+.banner-hero h1 {
+  z-index: 10;
+  font-size: 3rem;
+  color: #fff1f1;
+  text-align: center;
+  border: 5px solid #673ab7;
+}
+@media screen and (max-width: 560px) {
+  .banner-hero {
+    background-size: cover;
+    height: 16rem;
+  }
+}
+
+.banner-cta {
+  margin-top: 2rem;
+  line-height: 2.5;
+  display: block;
+  width: 100%;
+}
+.banner-cta a:first-of-type {
+  border: 1px solid #fff1f1;
+  margin-right: 1.5rem;
+}
+@media screen and (max-width: 560px) {
+  .banner-cta a {
+    display: block;
+    width: 100%;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+  }
+}
+
+/*****************
+*************STOP BANNER *******************************
+****************************************************************/
+/********************************************************
 ************* START PRODUCT CARD *******************************
 ****************************************************************/
 .card-cta, .product-card .product-card-cta .add-cart-cta, .product-card .product-card-cta .buy-now-cta {
@@ -309,14 +422,13 @@ body {
 .product-card .product-card-image {
   text-align: center;
   width: 100%;
+  max-height: 8.7rem;
   display: block;
 }
 .product-card .product-title {
   display: block;
-  text-align: center;
-  padding: 0.75rem 0rem;
   margin: auto;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: 400;
 }
 .product-card .product-card-rating {
@@ -366,8 +478,6 @@ table.table.cart-table th, table.table.cart-table td {
 #signup-btn, #login-btn {
   padding: 1rem 1.75rem;
   text-align: center;
-  color: #fff1f1;
-  background-color: #ff153b;
   border-radius: 5px;
   margin-bottom: 1.75rem;
 }
@@ -477,8 +587,8 @@ table.table.cart-table th, table.table.cart-table td {
 
 .auth-sidebar-handle {
   position: absolute;
-  top: 1rem;
-  left: 1rem;
+  top: 3.5rem;
+  left: 2rem;
   cursor: pointer;
 }
 
@@ -507,8 +617,8 @@ table.table.cart-table th, table.table.cart-table td {
   top: 0rem;
   right: 0rem;
   padding: 0.2rem;
-  color: #555;
-  background-color: transparent;
+  width: 1.02rem;
+  height: 1.02rem;
   cursor: pointer;
 }
 
@@ -576,9 +686,53 @@ table.table.cart-table th, table.table.cart-table td {
 }
 
 .auth-wrapper {
-  width: 98%;
+  width: 85%;
   display: block;
+  margin: auto;
   text-align: center;
+  padding-top: 1.5rem;
+  overflow-x: auto;
+}
+
+.editable {
+  background-color: #ff153b;
+  color: #fff1f1;
+}
+
+.table {
+  width: 100%;
+}
+
+thead {
+  font-weight: bolder;
+}
+
+th {
+  background-color: #ff153b;
+  color: #fff1f1;
+}
+
+tr:hover {
+  background-color: #ddd;
+}
+
+tr:nth-child(even) {
+  background-color: #CCC;
+}
+
+th {
+  height: 2.5rem;
+  text-align: left;
+}
+
+td {
+  vertical-align: middle;
+}
+
+th, td {
+  padding: 1rem;
+  text-align: left;
+  border-bottom: 1ps solid #ddd;
 }
 
 /*# sourceMappingURL=main.css.map */
