--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,4 +1,13 @@
-
+$primary-color: #ff153b;
+$light-color: #fff1f1;
+$success-color: #28a745;
+$danger-color: #dc3545;
+$dark-color: #555;
+$xs-size: 480px;
+$mobile-breakpoint: 560px;
+$tablet-breakpoint: 560px;
+$auth-sidebar-width: 13rem;
+$auth-sidebar-width-alt: -13rem ; //* $auth-sidebar-width;
 /********************************************************
 ************* START GLOBAL *******************************
 ****************************************************************/
@@ -15,17 +24,76 @@ html, body{
   line-height: 1.5;
   font-family: 'Montserrat', Roboto, Oxygen, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.container, .container-fluid{
+  width: 80%;
+  display: block;
+  margin: auto;
+}
+.container-fluid{
+  width: 90%;
+}
+.section{
+  padding: 4rem 0rem;
+  border-bottom: 1px solid #F1F1F1;
+  @media screen and (max-width: $mobile-breakpoint) {
+    
+    padding: 2rem 0rem;
+
+  }
+
+  &-title{
+    display: block;
+    width: 50%;
+    text-align: center;
+    margin: 1.8rem auto;
+    font-size: 1.8rem;
+    position: relative;
+    
+  }
+}
+
+.point{
+  position: relative;
+  &-tl::after{
+    content: no-close-quote;
+    position: absolute;
+    border: 3px $primary-color solid;
+    border-width: thick;
+    z-index: 1;
+    top: -8px;
+    left: 40%;
+  }
+  &-tr::after{
+    content: no-close-quote;
+    position: absolute;
+    border: 3px $primary-color solid;
+    border-width: thick;
+    z-index: 1;
+    top: -6px;
+    right: 40%;
+  }
+  &-bl::after{
+    content: no-close-quote;
+    position: absolute;
+    border: 3px $primary-color solid;
+    border-width: thick;
+    z-index: 1;
+    bottom: 3px;
+    left: 38%;
+  }
+  &-br::after{
+    content: no-close-quote;
+    position: absolute;
+    border: 3px $primary-color solid;
+    border-width: thick;
+    z-index: 1;
+    bottom: 2px;
+    right: 38%;
+  }
+}
 
 
-$primary-color: #ff153b;
-$light-color: #fff1f1;
-$success-color: #28a745;
-$danger-color: #dc3545;
-$dark-color: #555;
-$mobile-breakpoint: 560px;
-$tablet-breakpoint: 560px;
-$auth-sidebar-width: 13rem;
-$auth-sidebar-width-alt: -13rem ; //* $auth-sidebar-width;
+
 
 .icon{
   margin-right: .2rem;
@@ -259,12 +327,22 @@ $unit: 8.33%;
   text-align: center;
   background-color: transparent;
   color: $primary-color;
+  @media screen and (max-width: $xs-size) {
+    &{
+      font-size: 1.6rem;
+    }
+  }
 
 }
 .logo-name{
   font-size: 2rem;
   font-weight: 600;
   color: $primary-color;
+  @media screen and (max-width: $xs-size) {
+    &{
+      font-size: 1.6rem;
+    }
+  }
 
 }
 .navlinks {
@@ -671,7 +749,7 @@ table.table.cart-table{
        }        
      }
      .sidebar-name{
-       font-size: 1.75rem;
+       font-size: 1.5rem;
      }
     .auth-sidebar .sidebar-actions{
       margin-top: 1.75rem;
@@ -725,36 +803,161 @@ table.table.cart-table{
 
 
 // Tables
-.editable{
-  background-color: $primary-color;
-  color: $light-color;
-}
+
 .table{
   width: 100%;
   
+  thead{
+    font-weight: bolder;
+  }
+  th{
+    background-color: $primary-color;
+    color: $light-color;
+  }
+  tr:hover{
+    background-color: #ddd;
+  }
+  tr:nth-child(even){
+    background-color: #CCC;
+  }
+  th{
+    height: 2.5rem;
+    text-align: left;
+  }
+  td{
+    vertical-align: middle;
+  }
+  th, td{
+    padding: 1rem;
+    text-align: left;
+    border-bottom: 1ps solid #ddd;
+  }
 }
-thead{
-  font-weight: bolder;
+
+/******************* FEATURED SECTION ********************/
+#features{
+  @media screen and (max-width: $mobile-breakpoint){
+    &{
+      // background-image: url(../img/2.png);
+      background-image: url(https://picsum.photos/150/500);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+    
+    }
+ }
+   
 }
-th{
-  background-color: $primary-color;
-  color: $light-color;
+.feature-wrapper{
+  display: flex;
+  @media screen and (max-width: $mobile-breakpoint){
+    &{
+      display: block;
+      color: $light-color;
+      background-color: $primary-color;
+      opacity: .7;
+      padding: 1.5rem;
+    }
+  }
+  
 }
-tr:hover{
-  background-color: #ddd;
+.feature-items{
+  width: 55%;
+  @media screen and (max-width: $mobile-breakpoint){
+    &{
+      width: 100%;
+    }
+  }
+
 }
-tr:nth-child(even){
-  background-color: #CCC;
+
+.feature-product-image{
+  width: 45%;
+  background-color: #a4dcc3;
+  background-image: url(https://picsum.photos/150/500);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 1rem;
+  opacity: .7;
+  @media screen and (max-width: $mobile-breakpoint){
+    &{
+      display: none;
+    }
+  }
 }
-th{
-  height: 2.5rem;
-  text-align: left;
+
+.feature-card{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: flex-start;
+  margin: 1rem 0;
+
 }
-td{
-  vertical-align: middle;
+.feature-caption{
+  padding-left: 2rem;
 }
-th, td{
-  padding: 1rem;
-  text-align: left;
-  border-bottom: 1ps solid #ddd;
+
+/**************** CONTACT***************/
+
+.contact{
+  &-form, &-data{
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  
+  &-data{
+    width: 39%;
+    li{
+      line-height: 2.3;
+    }
+    li:first-of-type{
+      padding-bottom: 1.5rem;
+      border-bottom: 1px solid $light-color;
+    }
+  }
+  &-form{
+    width: 60%;
+  }
+
+  @media screen and (max-width: $tablet-breakpoint){
+    &-form, &-data{
+      display: block;
+      width: 100%;
+      margin: auto;
+      li, li:first-of-type{
+        display: block;
+        width: 100%;
+        margin: auto;
+        padding: 0;
+        padding-bottom: 0rem;
+        border-bottom: none
+      }
+      li:last-of-type{
+        padding-bottom: 1.5rem;
+        border-bottom: 1px$light-color solid;
+      }
+    }
+  }
+}
+
+.contact-icon{
+  position: relative;
+  bottom: -8px;
+  color: $primary-color;
+  margin-right: 1rem;
+}
+.contact-info{
+  display: inline;
+}
+
+
+#footer{
+  padding: 1.5rem 1rem;
+  background-color: #333;
+  color: #ddd;
+  
 }
